# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- Novo tema, de um novo designer! Frostbite, por @jhonny_dy (843293990874513408)

### Fixed

- O título do embed da feirinha da vizinhança estava invertido com o título da feira de um usuário.

### Removed

- **O sistema de Impostos foi completamente removido da Menhera.**
- O comando `/estatísticas impostos` foi deletado.

## [5.11.3] - 2024-01-07

### Added

- Adicionado diversos novos gifs aos comandos de ação graças ao Mareys, que enviou diversas sugestões.

### Fixed

- Pequeno problema ao iniciar partida de Poker quando a Menhera tem problemas para ler a mensagem anterior.
- O comando `/estatísticas designer` agora pagina a quantidade de designs por mensagem, dividindo todos em diversos embeds.

## [5.11.2] - 2024-01-03

### Added

- Adicionado o tema de carta `Baralho Noturno`, do Mareys.
- Adicionado o tema de fundo de carta `Amanhecer`, também do Mareys.

## [5.11.1] - 2023-11-20

### Added

- Agora é possível ver o histórico de jogos do bicho no [Site da Menhera](https://menherabot.xyz/bicho)!

### Changed

- Reduzido a quantidade máxima de prêmios possíveis nas entregas diárias.

### Fixed

- O jogo do bicho não identificava mais mãos de escolhas de animais.

## [5.11.0] - 2023-11-16

### Added

- **Limites no Silo** - O silo agora possui limite! O limite inicial é de `35` itens, e pode ser aumentado por `5` comprando _Melhorias para a fazendinha_.
- **Melhoria do silo** - Aumente o limite de itens de seu silo com `/fazendinha administrar silo`.