@@ -29,7 +29,7 @@ let orchestratorClient: Client;
 const getOrchestratorClient = (): Client => orchestratorClient;
 
 const createIpcConnection = async (): Promise<void> => {
-  // if (process.env.NODE_ENV === 'development') return;
+  if (process.env.NODE_ENV === 'development') return;
 
   const { ORCHESTRATOR_SOCKET_PATH } = getEnviroments(['ORCHESTRATOR_SOCKET_PATH']);
 
