@@ -11,6 +11,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 - Novo tema, de um novo designer! Frostbite, por @jhonny_dy (843293990874513408)
 
+### Changed
+
+- Agora é possível ver o silo de outra pessoa em `/fazendinha silo`. Sugerido por @mareys
+
 ### Fixed
 
 - O título do embed da feirinha da vizinhança estava invertido com o título da feira de um usuário.
